k8s/my-services/myapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: agounaris/myapp:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: web
          containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
    - name: web
      port: 80
      targetPort: 5000
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: myapp
  namespace: default
spec:
  virtualhost:
    fqdn: myapp.localhost
  routes:
  - services:
    - name: myapp
      port: 80
