k8s/my-services/nginx1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
        - name: nginx
          image: nginx:1.25.3
          ports:
            - name: web
              containerPort: 80
      #     volumeMounts:
      #       - name: nginx1-html
      #         mountPath: /usr/share/nginx/html/
      # volumes:
      # - name: nginx1-html
      #   configMap:
      #     name: nginx1-html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx1
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: nginx1
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nginx1
  namespace: default
spec:
  virtualhost:
    fqdn: nginx1.localhost
  routes:
  - services:
    - name: nginx1
      port: 80
