k8s/my-services/nginx2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: nginx:1.25.3
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
            - name: nginx2-html
              mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx2-html
        configMap:
          name: nginx2-html
---
apiVersion: v1
kind: Service
metadata:
  name: nginx2
spec:
  selector:
    app: nginx2
  ports:
    - name: web
      port: 80
      targetPort: web
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: nginx2
  namespace: default
spec:
  virtualhost:
    fqdn: nginx2.localhost
  routes:
  - services:
    - name: nginx2
      port: 80
