k8s/my-services/whoami.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - name: web
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: whoami
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: whoami
  namespace: default
spec:
  virtualhost:
    fqdn: whoami.localhost
  routes:
  - services:
    - name: whoami
      port: 80
